    movement was being filtered out if the mouse was moved too fast.

  * Fixed bug whereby switching to the debugger and back again would
    sometimes cause an extra mouse motion event (which would cause the
    emulation to think the mouse was moved and move the player
    accordingly).

  * Tweaked bankswitch autodetection code for 4A50 bankswitching.

-Have fun!


3.3 to 3.4: (May. 29, 2011)

  * Many improvements to input handling, particularly with the mouse and
    paddles:
    - The mouse can now be used to emulate a joystick, booster-grip or
      driving controller.

    - The mouse now controls only one device at a time (1 of 4 paddles,
      1 of 2 joysticks, etc), instead of devices from both virtual ports.

    - The sensitivity for digital and mouse input (for paddles) can now
      be set separately with the 'dsense' and 'msense' commandline
      arguments, and from within the Input Settings UI.

  * Added support for the 2600-daptor device (2600-daptor.com), which is
    similar to a Stelladaptor but improves handling of paddles.  Thanks
    go to Tom Hafner for a complimentary test sample of this device.

  * Added new controller types 'Paddles_IAxis', 'Paddles_IDir', and
    'Paddles_IAxDr', which invert the paddle axis, direction, and
    axis+direction, respectively.  These are used for certain ROMs
    that have the axis or direction inverted from normal (for example,
    using the paddles causes on onscreen object to move up and down vs.
    left and right).  All applicable ROMs in the internal database
    have been updated.

  * Added preliminary support for emulating ARM code to the DPC+
    bankswitching scheme (thanks to Batari).  Related to this, fatal
    errors in the DPC+ ARM code are now caught and shown in the debugger.

  * Updated internal ROM properties database to ROM-Hunter version 6
    (thanks go to RomHunter for his tireless research in this area).

  * The ROM audit dialog now automatically selects the current